lib/jazz.sample/src/jazz/sample/error/_error.jazz
;;;==============
;;;  JazzScheme
;;;==============
;;;
;;;; Errors
;;;


(module jazz.sample.error jazz


(import (jazz.sample.error.lib))


;;;
;;;; Outline
;;;


@ok (
(class X extends Object
  
  (class InnerClass extends Object)
  (interface InnerInterface)
  
  (slot s (extra))
  
  (generic (f))
  
  (c-type void (native void)))


(class Ambiguous metaclass Class extends Object
  
  (method meta (f)
    ))


(class Invalid
  
  (slot a getter (invalid generate))
  (slot a accessors (invalid generate)))


(define (f (a 2)) #f)
(definition (g (a 2) b))
(definition (h1 (a)))
(definition (h2 (a a 2)))
(definition (k1 (a:)))
(definition (k2 (a: a 2 3)))
(definition (k3 (a: b 2)))
(definition (l . 2))


(method (f))

(definition public protected foo 2))


;;;
;;;; Walk
;;;


       x
   y
              z


(if)
(set! Yo 2)


(case 2
  (2 3))

(class X extends Object)
(set! X 2)
(X)

(sqr 2 3)
(sort)

(set! 2 3)

jazz.sample.error.lib.not-found

(let 2)
(let (2) #f)
(let ((a)) #f)

(cond 2)
(case 2 2)

~x
(set! x~a 2)
(f~)


(class NoAscendant)


(class X extends Object
  
  (specific (f)))


(specific (not-found))


@need-to-handle-duplicate-declaration (
(definition foo 2)
(define foo 3))


(class W extends Object
  
  (method (f))
  (method virtual (v))
  (method override (o)))


(class Z extends W
  
  (method (f))
  (method (v))
  (method virtual (v)))


(interface I
  
  (method (f)))


(define (foo)
  (proclaim (warn optimizations))
  2)


(class X extends Object)
(class A extends Object)

(generic (g (<X> x)))
(specific (g (<A> a)))
(specific (g)))
